# spec-driven-c-os

./: .env.example  .gitignore  LICENSE  README.md
agent/: baseline.py  cli.py  coding_cli.py  config.py  judge.py  prompting.py  runner.py  state.py  workspace.py
deliverables/chapters/ch2/: ch2.elf  ch2.map  manifest.json
deliverables/chapters/ch3/: ch3.elf  ch3.map  manifest.json
deliverables/chapters/ch4/: ch4.map  manifest.json
deliverables/chapters/ch5/: ch5.map  manifest.json
deliverables/chapters/ch6/: ch6.map  manifest.json
deliverables/chapters/ch7/: ch7.map  manifest.json
deliverables/chapters/ch8/: ch8.map  manifest.json
docs/: v2-cos-lineage.md
experiments/v2/: README.md
experiments/v2/agent/: SKILL.md
experiments/v2/bundles/: ch2.bundle.md  ch3.bundle.md  ch4.bundle.md  ch5.bundle.md  ch6.bundle.md  ch7.bundle.md  ch8.bundle.md
experiments/v2/inputs/: user-tests-manifest.json
experiments/v2/prompts/: 30_generate_or_repair_os.md
experiments/v2/spec-v2/: manifest.json  riscv-os-requirements.md
experiments/v2/tg-rcore-tutorial-console/: .gitignore  .gitrepo  Cargo.toml  README.md  sysdeps.txt
experiments/v2/tg-rcore-tutorial-console/src/: lib.rs
experiments/v2/tg-rcore-tutorial-signal-defs/: .gitrepo  Cargo.toml  README.md  sysdeps.txt  systest.sh  systest.txt
experiments/v2/tg-rcore-tutorial-signal-defs/src/: lib.rs
experiments/v2/tg-rcore-tutorial-syscall/: .gitrepo  Cargo.toml  README.md  build.rs  sysdeps.txt
experiments/v2/tg-rcore-tutorial-syscall/src/: fs.rs  io.rs  lib.rs  syscall.h.in  time.rs  user.rs
experiments/v2/tg-rcore-tutorial-syscall/src/kernel/: mod.rs
experiments/v2/user/: .gitignore  .gitrepo  Cargo.toml  README.md  build.rs  cases.toml
experiments/v2/user/src/: heap.rs  lib.rs
runtime-assets/baselines/ch2/: case-summary.json
runtime-assets/baselines/ch3/: case-summary.json
runtime-assets/baselines/ch4/: case-summary.json
runtime-assets/baselines/ch5/: case-summary.json
runtime-assets/baselines/ch6/: case-summary.json
runtime-assets/baselines/ch7/: case-summary.json
runtime-assets/baselines/ch8/: case-summary.json
runtime-assets/user/ch2/: app.asm
runtime-assets/user/ch3/: app.asm
runtime-assets/user/ch4/: 00hello_world  05write_a  06write_b  07write_c  08power_3  09power_5  10power_7  11sleep  app.asm
runtime-assets/user/ch5/: 03priv_inst  15matrix  app.asm
runtime-assets/user/ch6/: 14forktest2  app.asm  filetest_simple
runtime-assets/user/ch7/: 04priv_csr  12forktest  13forktree  app.asm  cat_filea  initproc  sig_ctrlc  user_shell
runtime-assets/user/ch8/: 01store_fault  02power  app.asm  mpsc_sem  race_adder_mutex_blocking  sig_simple  (+6 more)
spec/: project.md
spec/bundles/: ch2.bundle.md  ch3.bundle.md  ch4.bundle.md  ch5.bundle.md  ch6.bundle.md  ch7.bundle.md  ch8.bundle.md
tools/: bootstrap.py  derive_shell_sequences.py  export_public_deliverables.py  package_chapter_spec.py
trial-workspaces/ch2/workspace/c-port/chapters/ch3/: CMakeLists.txt
trial-workspaces/ch2/workspace/c-port/chapters/ch3/src/: main.c
trial-workspaces/ch2/workspace/c-port/lib/syscall-abi/: CMakeLists.txt
trial-workspaces/ch2/workspace/c-port/lib/syscall-user-api/: CMakeLists.txt
trial-workspaces/ch3/workspace/c-port/chapters/ch4/: CMakeLists.txt
trial-workspaces/ch3/workspace/c-port/chapters/ch4/src/: main.c  process.c
trial-workspaces/ch3/workspace/c-port/lib/easy-fs-vfs/: CMakeLists.txt
trial-workspaces/ch4/workspace/c-port/: CMakeLists.txt
trial-workspaces/ch4/workspace/c-port/chapters/ch1/src/: main.c
trial-workspaces/ch4/workspace/c-port/chapters/ch2/: CMakeLists.txt
trial-workspaces/ch4/workspace/c-port/chapters/ch4/src/: process.h
trial-workspaces/ch4/workspace/c-port/chapters/ch5/: linker.ld
trial-workspaces/ch4/workspace/c-port/chapters/ch5/src/: main.c  process.c
trial-workspaces/ch4/workspace/c-port/chapters/ch6/: CMakeLists.txt
trial-workspaces/ch4/workspace/c-port/chapters/ch6/src/: main.c  processor.h
trial-workspaces/ch4/workspace/c-port/chapters/ch7/src/: main.c  processor.c
trial-workspaces/ch4/workspace/c-port/cmake/: RCoreTarget.cmake
trial-workspaces/ch4/workspace/c-port/include/rcore/: kernel_context.h  kernel_context_foreign.h  signal.h  syscalls.h
trial-workspaces/ch4/workspace/c-port/lib/easy-fs-storage/: CMakeLists.txt  layout.h
trial-workspaces/ch4/workspace/c-port/lib/easy-fs-vfs/: vfs.c
trial-workspaces/ch4/workspace/c-port/lib/kernel-context-foreign/: mod.c  mod.h
trial-workspaces/ch4/workspace/c-port/lib/signal-impl/: signal_set.c
trial-workspaces/ch4/workspace/c-port/lib/syscall-user-api/: user.h
trial-workspaces/ch4/workspace/c-port/tests/host/: ch3_contract.c  easy_fs_contract.c  signal_impl_contract.c  task_manage_relations_contract.c
trial-workspaces/ch5/workspace/c-port/lib/easy-fs/: CMakeLists.txt
trial-workspaces/ch5/workspace/c-port/lib/sync/: CMakeLists.txt  sync.c
trial-workspaces/ch6/workspace/c-port/lib/kernel-context/: CMakeLists.txt
trial-workspaces/ch6/workspace/c-port/lib/signal-impl/: CMakeLists.txt  signal_set.h
trial-workspaces/ch6/workspace/c-port/lib/sync-blocking-primitives/: CMakeLists.txt
trial-workspaces/ch6/workspace/c-port/lib/syscall-kernel-dispatch/: CMakeLists.txt  mod.c
trial-workspaces/ch6/workspace/c-port/lib/task-manage-core/: CMakeLists.txt  manager.c
trial-workspaces/ch6/workspace/c-port/lib/task-manage-relations/: CMakeLists.txt  proc_thread_rel.h
trial-workspaces/ch7/workspace/c-port/lib/kernel-context-foreign/: CMakeLists.txt
trial-workspaces/ch7/workspace/c-port/lib/syscall/: CMakeLists.txt
trial-workspaces/ch7/workspace/c-port/lib/task-manage/: CMakeLists.txt
trial-workspaces/ch8/workspace/c-port/chapters/ch1/: CMakeLists.txt
trial-workspaces/ch8/workspace/c-port/chapters/ch7/: CMakeLists.txt
trial-workspaces/ch8/workspace/c-port/chapters/ch7/src/: main.c
trial-workspaces/ch8/workspace/c-port/chapters/ch8/: CMakeLists.txt
trial-workspaces/ch8/workspace/c-port/chapters/ch8/src/: main.c
trial-workspaces/ch8/workspace/c-port/lib/signal/: CMakeLists.txt
(+282 files in other folders)
