[package]
name = "tg-rcore-tutorial-console"
description = "Provides `print!`, `println!` and `log::Log` with customizable implementations for rCore tutorial."
version = "0.4.8"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial-console"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial-console/tree/test"
documentation = "https://docs.rs/tg-rcore-tutorial-console"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "console", "no-std", "riscv"]
categories = ["no-std", "embedded"]

[dependencies]
log = "0.4"
spin = "0.9"
