[package]
name = "tg-rcore-tutorial-signal-defs"
description = "Signal definitions for rCore tutorial OS."
version = "0.4.8"
edition = "2024"
authors = ["scPointer <jax01@foxmail.com>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial-signal-defs"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial-signal-defs/tree/test"
documentation = "https://docs.rs/tg-rcore-tutorial-signal-defs"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "signal", "no-std", "riscv"]
categories = ["no-std", "embedded"]

[dependencies]
numeric-enum-macro = "0.2"
