[package]
name = "tg-rcore-tutorial-syscall"
description = "System call definitions and interfaces for rCore tutorial OS."
version = "0.4.8"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial-syscall"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial-syscall/tree/test"
documentation = "https://docs.rs/tg-rcore-tutorial-syscall"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "syscall", "no-std", "riscv"]
categories = ["no-std", "embedded"]

[dependencies]
spin = "0.9"
bitflags = "1.2"
tg-signal-defs = { package = "tg-rcore-tutorial-signal-defs", path = "../tg-rcore-tutorial-signal-defs", version = "0.4.8" }

[features]
kernel = []
user = []

[package.metadata.docs.rs]
targets = ["riscv64gc-unknown-none-elf"]
